2007-08-24  Stefan Harmeling  <harmeling@gmail.com>

	* parse.c (resolve_code_block): now the semicolon after an
	expression before 'else' is optional.  however, for a code block
	it is not allowed:

	if (true) 17 else 42; next_stm;     // ok
	if (true) 17; else 42; next_stm;    // ok
	if (true) {17} else 42; next_stm;   // ok
	if (true) 17 else {42}  next_stm;   // ok
	if (true) 17 else {42};  next_stm;  // ok
	if (true) 17;; else 42; next_stm;   // wrong (like in C)
	if (true) {17}; else 42; next_stm;  // wrong (like in C)	

2007-08-24  Mikio Braun  <mikiobraun@gmail.com>

	* parse.c (resolve_list_by_head): changed ordering of the checks
	to make it "more logical" (First if used to check for a large
	negated condition). Hopefully still correct ;)

	* parse.c: cleaned up and rearranged this file a bit

2007-08-24  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (extend): wrote function 'extend' which is able to add
	new cases to function, or to create new functions.

	* eval.c (call_rha_fun): uses the new representation of functions
	and is able to find the implementation of the first function that
	has the same number of arguments.

	* core.c (fn_fn, create_fn_data, create_fn_data_entry): the inner
	representation of function has changed. now all information is
	stored in a slot 'fn_data' which must contain a list of 3-tuples,
	each of which has entries 'argnames', 'env', and 'fnbody'.

	* prules.c (resolve_assign_prule): now assignments to symbols
	still creates assignment, but assignments to calls creates
	extends:

	    x=0          (assign local x 0)
	    a.x=0        (assign a x 0)

	    f(x)=0       (extend local (quote f) (quote (x)) local (quote 0))
	    a.f(x)=0     (extend a     (quote f) (quote (x)) local (quote 0))

	* eval.c (call_rha_fun): added 'static'

	* parse.c (resolve_code_block): now a sequence of commands in
	curly brackets is split after a code block (in curly brackets) if