@@ -5,8 +5,10 @@
 #include "rha_init.h"
 
 extern _rha_ bool_t   bool_equal(bool_t, bool_t);
-extern _rha_ bool_t   bool_not(bool_t);
-// 'and' and 'or' are now with lazy macro-versions in core.c
 extern _rha_ string_t bool_to_string(bool_t);
+
+extern _rha_ bool_t   not_fn(bool_t);
+extern _rha_ bool_t   or_fn(bool_t a, bool_t b);
+extern _rha_ bool_t   and_fn(bool_t a, bool_t b);
 
 #endif
