@@ -9,6 +9,7 @@ extern _rha_ object_t  proxy_fn(object_t this, symbol_t s);
 extern _rha_ object_t  create_fn_data(object_t env, tuple_t argnames, object_t fnbody);
 extern _rha_ object_t  create_fn_data_entry(object_t env, tuple_t argnames, object_t fnbody);
 extern _rha_ object_t  fn_fn(object_t env, tuple_t argnames, object_t fnbody);
+extern _rha_ object_t  macro_fn(tuple_t argnames, object_t fnbody);
 extern _rha_ object_t  if_fn(object_t this, bool_t cond, object_t then_code, object_t else_code);
 extern _rha_ void      return_fn(object_t);
 extern _rha_ void      deliver_fn(object_t);
@@ -26,8 +27,5 @@ extern _rha_ void      tic_fn();
 extern _rha_ real_t    toc_fn();
 extern _rha_ void      exit_fn(int_t);
 extern _rha_ object_t  run_fn(object_t root, string_t fname);
-
-extern _rha_ bool_t    and_fn(bool_t, bool_t);
-extern _rha_ bool_t    or_fn(bool_t, bool_t);
 
 #endif
